--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,16 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: rgba(15, 38, 92, 0.5);
   height: 150px;
   padding: 20px;
-  color: white;
+  /* color: white; */
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2.5em;
+  color: rgba(15, 38, 92);
+  text-align: left;
 }
 
 .App-intro {
@@ -23,6 +25,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
